//  File: tao_domain.proto
//  Author: Kevin Walsh <kwalsh@holycross.edu>
//
//  Description: Protocol buffers for TaoDomain.
//
//  Copyright (c) 2013, Google Inc.  All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

package tao;

import "tao/keys.proto"

// TODO(kwalsh) Move TaoCAConfig elsewhere?
message TaoCAConfig {
  required string host = 1;
  required string port = 2;
}

message TaoDomainConfig {
  required string name = 1;
  required string policy_keys_path = 2;
  required X509Details policy_x509_details = 3;
  // TODO(kwalsh) store serial number state elsewhere
  required int32 policy_x509_last_serial = 4; 
  required string guard_type = 5;

  optional TaoCAConfig tao_ca = 6;

  extensions 100 to 299;
}

